# Task1

./: CMakeLists.txt  in.txt  main.cpp
DistanceCalc/: DistanceCalc.cpp  DistanceCalc.h
Point3D/: Point3D.cpp  Point3D.h
Polyline3D/: Polyline3D.cpp  Polyline3D.h
Segment3D/: Segment3D.cpp  Segment3D.h
Vector3D/: Vector3D.cpp  Vector3D.h
test/: test_point3d.cpp  test_task1.cpp
